fix z-index on navbar to avoid conflicts with slider controls

--- a/app/assets/stylesheets/objects/_navbar.scss
+++ b/app/assets/stylesheets/objects/_navbar.scss
@@ -8,7 +8,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  z-index: 1030;
+  z-index: 10000;
   margin-bottom: 0;
 
   .brand {
